app/v1/k8s.yaml
apiVersion: v1
kind: List
items:
- kind: ReplicaSet
  apiVersion: apps/v1
  metadata:
    name: hello-world
  spec:
    replicas: 10
    selector:
      matchLabels:
        app: hello-world
        version: v1
    template:
      metadata:
          labels:
            app: hello-world
            version: v1
      spec:
        containers:
          - name: hello
            image: gcr.io/devopsdays-warsaw-presentation/hello-world:v1
            ports:
              - containerPort: 80
- kind: Service
  apiVersion: v1
  metadata:
    name: hello-world
    labels:
      app: hello-world
  spec:
    ports:
      - port: 80
        targetPort: 8080
        name: http
- kind: VirtualService
  apiVersion: networking.istio.io/v1alpha3
  metadata:
    name: hello-vs
  spec:
    hosts:
    - "*"
    gateways:
    - hello-gateway
    http:
      - match:
        - uri:
          prefix: /
      route:
      - destination:
          host: hello-world
          subset: v1
